Fixed spacing between posts

--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -14,6 +14,7 @@
   width: 640px;
   border-radius: 10px;
   border: 1px solid hsl(242, 22%, 51%);
+  margin-bottom: 25px;
 }
 
 .bottomPartOfPost {
